# semantic_matching

./: .gitignore  .gitmodules  README.md  install_base.def  legacy_installation.md
config/: detectron2_conda.yml  habitat_conda.yml  semantic_mapping_conda.yaml  semantic_mapping_conda_no_build.yaml  superpixel_conda.yml
data/: README.md
instance_segmentation/: README.md  installation.sh  main.py
instance_segmentation/inference/: README.md  main.py  run.sh
instance_segmentation/utils/: logging_settings.py  preprocess_ade20k.py  preprocess_mit.py  preprocess_sunrgbd.py  trainer.py  trainer_utils.py
kimera_ws/: .gitignore
kimera_ws/src/rendering/: CMakeLists.txt  README.md  package.xml  setup.py
kimera_ws/src/rendering/conda/: rendering_conda.yml
kimera_ws/src/rendering/launch/: rendering.launch
kimera_ws/src/rendering/src/rendering/: CameraConfig.py  __init__.py  meshrenderer.py  ros_renderer_node.py  t_meshrenderer.py
scripts/apptainer/: exec.bash  start.bash  stop.bash
scripts/experiments/: eit_evaluate.bash  eit_one_run.bash  eit_suite.bash  habitat_evaluate_suite.bash  habitat_image_capture.bash  habitat_one_run.bash  habitat_suite.bash  height_evaluation.bash  height_experiment_evaluate.bash  height_experiment_suite.bash
scripts/run/: compare_meshes.bash  image_capture_node.bash  rosbag_play.bash  roscore.bash  roslaunch.bash  roslaunch_detectron2.bash  roslaunch_habitat.bash  roslaunch_kimera.bash  roslaunch_kimera_habitat.bash  roslaunch_mrcnn.bash  (+7 more)
synthetic_data_postprocessing/: README.md  main.py  superpixel_postprocessing_notebook.ipynb
(+80 files in other folders)
